--- a/_sass/_mixins.scss
+++ b/_sass/_mixins.scss
@@ -1,7 +1,7 @@
 // Layout ———————————————————————————————————— •
 // ——————————————————————————————————————————— •
 
-$column-width: 36em;
+$column-width: 27.5em;
 
 // Typography ———————————————————————————————— •
 // ——————————————————————————————————————————— •
